# QuickPocket

./: .gitignore  CMakeLists.txt  LICENSE  README.md  xmake.lua
.github/workflows/: build-release.yml
include/QuickPocket/: ChanceService.h  Config.h  EventHandlers.h  FormUtil.h  HoverController.h  LogSettings.h  Papyrus.h  PickpocketRules.h  PlantModeController.h  QuickLootAPI.h  QuickLootBridge.h
res/QuickPocket/: DefaultConfig.json
res/esp/: RecordData.yaml  spriggit-meta.json
res/esp/Quests/: MCMQuickPocket - 000001_QuickPocket.esp.yaml
res/pex/Source/Scripts/: QuickPocket.ppj  QuickPocketLoad.psc  QuickPocketMCM.psc  QuickPocketMaintenance.psc  QuickPocketNative.psc
res/txt/Interface/translations/: QuickPocket_english.txt
src/: ChanceService.cpp  Config.cpp  EventHandlers.cpp  HoverController.cpp  PCH.h  Papyrus.cpp  PickpocketRules.cpp  PlantModeController.cpp  QuickLootBridge.cpp  main.cpp
